# idf-my-buddy

./: .dockerignore  .env.example  .gitignore  Dockerfile  ERROR_RESOLUTION_SUMMARY.md  FINAL_VALIDATION_REPORT.md  MULTILINGUAL_VERIFICATION_REPORT.md  Makefile  PLANNING.md  PROCESS_WALKTHROUGH.md  README.md  TASK.md  VOICE_SERVICES_VALIDATION_REPORT.md  direct_nllb_test.py  direct_tts_test.py  docker-compose.yml  final_validation_report.py  minimal_multilingual_check.py  poetry.toml  pyproject.toml  pytest.ini  quick_test.py  quick_validate.py  requirements-dev.txt  requirements.txt  run_navigation_tests.py  setup.py  simple_error_test.py  simple_multilingual_test.py  simple_perf_test.py  simple_tts_test.py  simple_validation.py  simple_ws_test.py  test_error_handling.py  test_multilingual.py  test_performance.py  test_schema_corrections.py  test_tts_endpoint.py  test_websocket_conversation.py  validate_foundation.py  (+1 more)
.claude/commands/: execute-prp.md  generate-prp.md
app/: __init__.py  main.py
app/adapters/: __init__.py  maps.py  places.py  weather.py
app/api/: health.py  navigation.py  restaurant.py  safety.py  shopping.py
app/api/v1/: __init__.py  auth.py  navigation.py  restaurant.py  safety.py  shopping.py  voice.py
app/core/: config.py  database.py  database_simple.py  deps.py  errors.py  flags.py  logging.py
app/ml/: __init__.py  edge_utils.py  model_loader.py  performance.py
app/ml/runners/: __init__.py
app/schemas/: __init__.py  auth.py  common.py  navigation.py  restaurant.py  safety.py  shopping.py  voice.py
app/services/: __init__.py  allergen_detection.py  cultural_dining.py  maps.py  nllb.py  ocr.py  restaurant_intelligence.py  tts.py  voice_navigation.py  voice_pipeline.py  whisper.py
app/services/audio/: __init__.py  formats.py  preprocessing.py  streaming.py
app/utils/: image_preprocessor.py
docs/: CLAUDE.md  DEPENDENCIES.md  DOCKER.md  INITIAL.md  project-proposal.md  project-research.md
docs/PRPs/: foundation-setup.md  navigation-services-integration.md  restaurant-intelligence.md  voice-services-integration.md
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: backup-db.sh  dev-start.sh  init-db.sql  install-deps.sh  prod-deploy.sh  run-tests.sh
tests/: conftest.py  conftest_backup.py  conftest_simple.py  test_basic.py  test_navigation_schemas.py  test_simple.py  utils.py
tests/api/: test_restaurant_api.py
tests/integration/: test_ai_services.py  test_database.py  test_navigation_api.py  test_voice_api.py
tests/services/: test_cultural_dining.py  test_restaurant_intelligence.py  test_tts.py  test_voice_pipeline.py  test_whisper.py
tests/unit/: test_api.py  test_config.py  test_models.py  test_navigation_service.py  test_voice_navigation.py
